# echo-chamber

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .semgrep.yml  ARD.md  BRAIN.md  BRD.md  COMMANDER-SPEC.md  DIVISIONS.md  Dockerfile  Makefile  PLAYBOOK.md  README.md  SPEC.md  TECH-STACK.md  alembic.ini  archive.md  coverage.xml  docker-compose.yml  kanban.md  legend-quality.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties
.github/workflows/: ci.yml  quality.yml  security-scan.yml
.legendclaw/: contracts.json
.trunk/: trunk.yaml
GANGLIA/: discord.md  reddit.md
TACTICS/: reddit-playbook.md  tiktok-playbook.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py
scripts/: legend-claw-gate.sh  legend-claw-quality-gate.py
src/echo_chamber/: __init__.py  config.py
src/echo_chamber/api/: __init__.py  routes.py
src/echo_chamber/cortex/: __init__.py  graph.py  state.py
src/echo_chamber/db/: init.sql
tests/: conftest.py  test_basic.py  test_cortex_graph.py  test_cortex_graph_comprehensive.py
