[project]
name = "echo-chamber"
version = "0.1.0"
description = "ECHO CHAMBER — AI Agent Marketing Amplification Engine"
readme = "README.md"
license = { text = "BUSL-1.1" }
authors = [
    { name = "Leap Ahead Labs", email = "admin@leapaheadlabs.com" }
]
requires-python = ">=3.12,<4.0"

[tool.poetry]
packages = [{ include = "echo_chamber", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

# ── Core Framework ──────────────────────────────────────────────────────
langgraph = ">=0.3,<1.0"
langchain = ">=0.3,<1.0"
langchain-openai = ">=0.3,<1.0"
langchain-anthropic = ">=0.3,<1.0"

# ── API & Server ────────────────────────────────────────────────────────
fastapi = ">=0.115,<1.0"
uvicorn = { version = ">=0.34,<1.0", extras = ["standard"] }
pydantic = ">=2.10,<3.0"
pydantic-settings = ">=2.7,<3.0"

# ── Database ────────────────────────────────────────────────────────────
asyncpg = ">=0.30,<1.0"
sqlalchemy = { version = ">=2.0,<3.0", extras = ["asyncio"] }
pgvector = ">=0.3,<1.0"
alembic = ">=1.14,<2.0"
redis = ">=5.2,<6.0"

# ── Platform APIs ───────────────────────────────────────────────────────
praw = ">=7.8,<8.0"
discord-py = ">=2.4,<3.0"

# ── Utilities ───────────────────────────────────────────────────────────
httpx = ">=0.28,<1.0"
tenacity = ">=9.0,<10.0"
structlog = ">=24.4,<25.0"
rich = ">=13.9,<14.0"

[tool.poetry.group.dev.dependencies]
# ── Testing ─────────────────────────────────────────────────────────────
pytest = ">=8.3,<9.0"
pytest-asyncio = ">=0.25,<1.0"
pytest-cov = ">=6.1,<7.0"
pytest-mock = ">=3.14,<4.0"
pytest-httpx = ">=0.35,<1.0"

# ── Linting & Type Checking ─────────────────────────────────────────────
ruff = ">=0.9,<1.0"
mypy = ">=1.14,<2.0"
bandit = { version = ">=1.8,<2.0", extras = ["toml"] }

# ── Pre-commit ──────────────────────────────────────────────────────────
pre-commit = ">=4.0,<5.0"

# ── Type Stubs ──────────────────────────────────────────────────────────
types-redis = ">=4.6,<5.0"
types-requests = ">=2.32,<3.0"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

# ── Tool Configs ─────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["echo_chamber"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "langgraph.*",
    "langchain.*",
    "langchain_openai.*",
    "langchain_anthropic.*",
    "praw.*",
    "discord.*",
    "pgvector.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "slow: slow tests (deselect with '-m \"not slow\"')",
    "integration: integration tests requiring live services",
    "unit: unit tests",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 0  # Increase as coverage grows
show_missing = true
skip_empty = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "node_modules"]
skips = ["B101"]  # assert (allowed in test code)
severity = "medium"